# retauri-scoreboard

./: controlboard.html  index.html  package.json  pnpm-lock.yaml  scoreboard.html  styles.css
.github/workflows/: main.yml
src/: Controlboard.tsx  Data.ts  Scoreboard.tsx  control.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/controlboard/: Controlboard.tsx  IncrementComponent.tsx  MatchInfo.css  MatchInfo.tsx  Player.css  Player.tsx  Team.tsx
src/scoreboard/: ImageComponent.tsx  MatchInfo.tsx  Player.css  Player.tsx  SExclusionUi.tsx  SMatchInfo.tsx  SMatchInfoTeam.tsx  SPlayerUi.tsx  STeamUi.tsx  Scoreboard.css  Scoreboard.tsx  Team.tsx  main.tsx
src/settings/: Settings.css  Settings.tsx  TimeBox.tsx  TimeConvertBox.tsx  TimeInput.tsx  TimeInputBox.tsx
src/styles/: Controlboard.css  Exclusion.css  IncrementComponent.css  MatchInfo.css  Player.css  Scoreboard.css  Settings.css  Team.css  TimeBox.css  TimeConvertBox.css  TimeInputBox.css
trash/: MatchInfo.css  Player.css  Scoreboard.css
